SFUSA/force-app/main/default/objects/Bonus_Coupon__c/fields/AccountName__c.field-meta.xml
<CustomField>
        <fullName>AccountName__c</fullName>
        <formula>Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AccountName</label>
        <type>Text</type>
    </CustomField>