SFUSA/force-app/main/default/objects/Bonus_Coupon__c/fields/Date_Issued__c.field-meta.xml
<CustomField>
        <fullName>Date_Issued__c</fullName>
        <label>Date Issued</label>
        <type>Date</type>
    </CustomField>