SFUSA/force-app/main/default/objects/Bonus_Coupon__c/fields/Date_Redeemed__c.field-meta.xml
<CustomField>
        <fullName>Date_Redeemed__c</fullName>
        <label>Date Redeemed</label>
        <type>Date</type>
    </CustomField>