SFUSA/force-app/main/default/objects/Bonus_Coupon__c/fields/Pin__c.field-meta.xml
<CustomField>
        <fullName>Pin__c</fullName>
        <defaultValue>LEFT(TEXT(FLOOR(SQRT((value( 
(left(right(text(now()),6),2))&amp; 
text(DAY(DATEVALUE(now())))&amp; 
text(Month(DATEVALUE(now())))&amp; 
text(Year(DATEVALUE(now())))&amp; 
(left(right(text(now()),9),2))) 
)*100)) 
),6)</defaultValue>
        <description>Generate a 4 character pin code which allows the Account to select the Wholesaler and obtain the full Coupon code</description>
        <label>Pin</label>
        <length>6</length>
        <type>Text</type>
        <unique>true</unique>
    </CustomField>