SFUSA/force-app/main/default/objects/Bonus_Coupon__c/fields/Redemption_End_Date__c.field-meta.xml
<CustomField>
        <fullName>Redemption_End_Date__c</fullName>
        <defaultValue>TODAY() + 60</defaultValue>
        <label>Redemption End Date</label>
        <type>Date</type>
    </CustomField>