SFUSA/force-app/main/default/objects/Bonus_Coupon__c/fields/Wholesaler_Redeemed__c.field-meta.xml
<CustomField>
        <fullName>Wholesaler_Redeemed__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This value can only be selected by the Customer Account</inlineHelpText>
        <label>Wholesaler</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Bonus Coupons (Wholesaler Redeemed)</relationshipLabel>
        <relationshipName>Wholesaler_Redeemed_Check</relationshipName>
        <type>Lookup</type>
    </CustomField>