SFUSA/force-app/main/default/objects/Bonus_Coupon__c/listViews/All_Issues_Coupons.listView-meta.xml
<ListView>
        <fullName>All_Issues_Coupons</fullName>
        <columns>NAME</columns>
        <columns>AccountName__c</columns>
        <columns>Coupon_Code__c</columns>
        <columns>Amount__c</columns>
        <columns>Status__c</columns>
        <columns>Pin__c</columns>
        <columns>Redemption_Start_Date__c</columns>
        <columns>Redemption_End_Date__c</columns>
        <columns>Date_Redeemed__c</columns>
        <columns>Wholesaler_Redeemed__c</columns>
        <columns>Contact__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Pending,Issued</value>
        </filters>
        <label>All Issued Coupons</label>
    </ListView>